Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37049

my_assume_aligned assertion in mariabackup under encryption.recovery_memory test

    XMLWordPrintable

Details

    • Not for Release Notes

    Description

      11.4.8-e63e0e4c6f164adba477512eb8f1e16abb4182e1 Debug

      CURRENT_TEST: encryption.recovery_memory
      mysqltest: At line 20: exec of '/build/extra/mariabackup/mariadb-backup --defaults-file=/build/mysql-test/var/my.cnf  --backup --target-dir=/build/mysql-test/var/tmp/backup 2>&1' failed, error: 34304, status: 134, errno: 11
      Output from before failure:
      [00] 2025-06-20 02:10:51 Connecting to MariaDB server host: localhost, user: root, password: set, port: 19000, socket: /build/mysql-test/var/tmp/mysqld.1.sock
      [00] 2025-06-20 02:10:51 Using server version 11.4.8-MariaDB-debug-log
      /build/extra/mariabackup/mariadb-backup based on MariaDB server 11.4.8-MariaDB Linux (aarch64)
      [00] 2025-06-20 02:10:51 uses posix_fadvise().
      [00] 2025-06-20 02:10:51 cd to /build/mysql-test/var/mysqld.1/data/
      [00] 2025-06-20 02:10:51 Loading encryption plugin
      [00] 2025-06-20 02:10:51 	 Encryption plugin parameter :  '--file_key_management_encryption_algorithm=aes_cbc'
      [00] 2025-06-20 02:10:51 	 Encryption plugin parameter :  '--file_key_management_filekey='
      [00] 2025-06-20 02:10:51 	 Encryption plugin parameter :  '--file_key_management_filename=/source/mysql-test/std_data/logkey.txt'
      [00] 2025-06-20 02:10:51 open files limit requested 1024, set to 1024
      [00] 2025-06-20 02:10:51 mariabackup: using the following InnoDB configuration:
      [00] 2025-06-20 02:10:51 innodb_data_home_dir = 
      [00] 2025-06-20 02:10:51 innodb_data_file_path = ibdata1:12M:autoextend
      [00] 2025-06-20 02:10:51 innodb_log_group_home_dir = ./
      2025-06-20  2:10:51 0 [Note] InnoDB: Number of transaction pools: 1
      2025-06-20  2:10:51 0 [Note] InnoDB: Memory-mapped log (block size=512 bytes)
      mariadb-backup: /source/include/assume_aligned.h:34: T my_assume_aligned(T) [Alignment = 4UL, T = unsigned char *]: Assertion `reinterpret_cast<size_t>(ptr) % Alignment == 0' failed.
      250620  2:10:51 [ERROR] /build/extra/mariabackup/mariadb-backup got signal 6 ;
      Sorry, we probably made a mistake, and this is a bug.
       
      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs about how to report
      a bug on https://jira.mariadb.org/.
       
      Please include the information from the server start above, to the end of the
      information below.
       
      Server version: 11.4.8-MariaDB-debug source revision: 
       
      include/assume_aligned.h:0(unsigned char* my_assume_aligned<4ul, unsigned char*>(unsigned char*))[0xaaaadaae53d4]
      log/log0crypt.cc:382(log_crypt_write_header(unsigned char*))[0xaaaadaae4d74]
      mariabackup/xtrabackup.cc:2598(log_hdr_init())[0xaaaad5ce7df4]
      mariabackup/xtrabackup.cc:5566(xtrabackup_backup_func())[0xaaaad5cdde90]
      mariabackup/xtrabackup.cc:7826(main_low(char**))[0xaaaad5cd428c]
      mariabackup/xtrabackup.cc:7626(main)[0xaaaad5cd1548]
      /lib/aarch64-linux-gnu/libc.so.6(+0x27740)[0xffffa8e27740]
      /lib/aarch64-linux-gnu/libc.so.6(__libc_start_main+0x98)[0xffffa8e27818]
      /build/extra/mariabackup/mariadb-backup(_start+0x30)[0xaaaad5c09730]
      Writing a core file...
       
       
      The result from queries just before the failure was:
      CREATE TABLE t1(f1 text, index idx(f1(20))) ENGINE INNODB;
      set global innodb_fast_shutdown=0;
      # restart: --debug_dbug=+d,ib_log_checkpoint_avoid_hard --innodb_flush_sync=0
      set global debug_dbug="+d,ib_log_checkpoint_avoid_hard";
      
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.