MDEV-37049 my_assume_aligned assertion in mariabackup

log_hdr_buf: Align to an 8-byte boundary, because we will actually
assume at least 4-byte alignment in log_crypt_write_header().

This fixes a regression that had been introduced in
commit 685d958e38b825ad9829be311f26729cccf37c46 (MDEV-14425)
where a 512-byte alignment requirement was relaxed too much.